--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -7,10 +7,10 @@
       <link rel="stylesheet" href="./style.css">
 </head>
 <body id="container">
-    <!-- <h1>hello</h1>
-<button onclick="changeColor('btn1')" id ="b1">Red</button>
+ <h1>Assignment1</h1>
+ <!-- <button onclick="changeColor('btn1')" id ="b1">Red</button>
 <button onclick="changeColor('btn2')" id = "b2">Green</button>
-<button onclick="changeColor('btn3')" id = "b3">Yellow</button> -->
+<button onclick="changeColor('btn3')" id = "b3">Yellow</button>  -->
 
   <button onclick="changeColor('btn1')" id ="b1" class="button-29 btn1" role="button">Red</button>
   <button onclick="changeColor('btn2')" id = "b2" class="button-29 btn2" role="button">Green</button>
