--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -12,9 +12,9 @@
 <button onclick="changeColor('btn2')" id = "b2">Green</button>
 <button onclick="changeColor('btn3')" id = "b3">Yellow</button>  -->
 
-  <button onclick="changeColor('btn1')" id ="b1" class="button-29 btn1" role="button">Red</button>
-  <button onclick="changeColor('btn2')" id = "b2" class="button-29 btn2" role="button">Green</button>
-  <button onclick="changeColor('btn3')" id = "b3" class="button-29 btn3" role="button">Yellow</button>
+  <button onclick="changeColor(0)" id ="b1" class="button-29 btn1" role="button">Red</button>
+  <button onclick="changeColor(1)" id = "b2" class="button-29 btn2" role="button">Green</button>
+  <button onclick="changeColor(2)" id = "b3" class="button-29 btn3" role="button">Yellow</button>
   <button onclick="rotate('right')" id = "clock" class="button-29 btn4" role="button">ClockWise</button>
   <button onclick="rotate('left')" id = "anticlock" class="button-29 btn5" role="button">AntiClockWise</button>
 
